# airswap-rs

./: CHANGELOG.md  Cargo.toml  build.rs  readme.md
abi/: IPool.json  IRegistry.json  Staking.json  SwapERC20.json  Wrapper.json
examples/: pool.rs  utils.rs
src/: lib.rs  pool.rs  registry.rs  staking.rs  swap_erc20.rs  wrapper.rs
src/bindings/: i_pool.rs  i_staking.rs  mod.rs  pool.rs  registry.rs  staking.rs  swap_erc20.rs  wrapper.rs
src/common/: constants.rs  mod.rs
src/contracts/: addresses.json  addresses.rs  mod.rs
src/contracts/bindings/: i_registry.rs  i_swap_erc20.rs  i_wrapper.rs
src/utils/: mod.rs  pool.rs  swap.rs  types.rs
