[package]
name = "airswap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
once_cell = "1.17.0"

[build-dependencies]
# For bindings
ethers-contract = "1.0"
