[package]
name = "airswap-rs"
version = "0.2.0"
edition = "2021"
authors = ["Perelyn"]
description = "Rust SDK library for the Airswap smart contracts."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
once_cell = "1.17.0"
ethers-core = "1.0"
ethers-contract = "1.0"
chrono = "0.4.23"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["addresses"]

serde = ["dep:serde"]
addresses = ["serde", "serde_json"]

[build-dependencies]
# For bindings
ethers-contract = "1.0"

